add refresh and reconnect buttons

--- a/html/options.html
+++ b/html/options.html
@@ -100,6 +100,8 @@
 		<li class="list-group-item">
 			<div class="d-flex align-items-center">
 				<label class="text-truncate me-auto h4 mb-0"></label>
+				<button class="btn btn-warning ms-2 refresh" type="button" aria-label="Refresh">Refresh</button>
+				<button class="btn btn-warning ms-2 reconnect" type="button" aria-label="Reconnect">Reconnect</button>
 				<button class="btn btn-close ms-2" type="button" aria-label="Remove"></button>
 			</div>
 			<ul class="errors d-none" style="padding-left: unset;"></ul>
