--- a/html/options.html
+++ b/html/options.html
@@ -100,7 +100,7 @@
 		<li class="list-group-item">
 			<div class="d-flex align-items-center">
 				<label class="text-truncate me-auto h4 mb-0"></label>
-				<button name="reconnect" class="btn btn-secondary ms-2" type="button" aria-label="Reconnect">⟳</button>
+				<button name="reconnect" class="btn btn-secondary ms-2" type="button" aria-label="Reconnect">&#10227;</button>
 				<button name="remove" class="btn btn-close ms-2" type="button" aria-label="Remove"></button>
 			</div>
 			<ul class="errors d-none" style="padding-left: unset;"></ul>
