--- a/html/popup.html
+++ b/html/popup.html
@@ -20,34 +20,21 @@
 			<div class="list-group" id="errorsContainer"></div>
 		</div>
 	</body>
-	<template id="singleStreamTemplate">
+	<template id="multipleStreamTemplate">
 		<div class="list-group-item">
 			<div style="height:1.5em;">
 				<span class="accountIcon"></span>
 				<span class="title"></span>
 			</div>
-			<div style="overflow-x: hidden;">
-				<div class="desc d-inline-block"></div>
-			</div>
+			<div class="streamsList"></div>
 		</div>
 	</template>
-	<template id="streamingTemplate">
-		<div class="list-group-item d-flex btn-group" role="group">
-			<button type="button" class="btn" data-bs-toggle="dropdown" aria-expanded="false">
-				<div class="title" style="text-align: left;"></div>
-    			<div class="list-group streams"></div>
-			</button>
-			<button type="button" class="btn dropdown-toggle dropdown-toggle-split flex-grow-0" data-bs-toggle="dropdown" aria-expanded="false"></button>
-			<ul class="dropdown-menu w-100"></ul>
+	<template id="streamTemplate">
+		<div style="display: flex;align-items: center;">
+			<img class="subIcon"></img>
+			<span class="descContainer">
+				<span class="desc"></span>
+			</span>
 		</div>
-	</template>
-	<template id="streamIconTemplate">
-		<button class="btn list-group-item">
-			<span class="accountIcon"></span>
-			<marquee class="desc"></marquee>
-		</button>
-	</template>
-	<template id="streamDropdownItemTemplate">
-		<li><a class="dropdown-item" target="_blank"></a></li>
 	</template>
 </html>
