update notification logic
update notification logic to ignore old cache updates.
supports multiple streams in 1 notification, but is kinda janky.
hopefully have fixed instances where the background update alarm never gets created.
bugfixes.

--- a/html/popup.html
+++ b/html/popup.html
@@ -21,20 +21,20 @@
 		</div>
 	</body>
 	<template id="multipleStreamTemplate">
-		<div class="list-group-item">
+		<a class="list-group-item">
 			<div style="height:1.5em;">
 				<span class="accountIcon"></span>
 				<span class="title"></span>
 			</div>
 			<div class="streamsList"></div>
-		</div>
+		</a>
 	</template>
 	<template id="streamTemplate">
-		<div style="display: flex;align-items: center;">
+		<a style="display:flex;align-items:center;color:unset;text-decoration:unset;">
 			<img class="subIcon"></img>
 			<span class="descContainer">
 				<span class="desc"></span>
 			</span>
-		</div>
+		</a>
 	</template>
 </html>
